deployments/bitwarden.yaml
# Generate secret
# ADMIN_TOKEN=$(openssl rand -base64 32)
# echo -n "$ADMIN_TOKEN" | base64

apiVersion: v1
kind: Namespace
metadata:
  name: bitwarden
---
# vaultwarden-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: bitwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden-data
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: bitwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - protocol: TCP
      port: 80
---
# vaultwarden-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: bitwarden
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - bitwarden.lab.kratochvil.cloud
      secretName: vaultwarden-tls
  rules:
    - host: bitwarden.lab.kratochvil.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
