deployments/openspeedtest.yaml
# openspeedtest-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openspeedtest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openspeedtest
  namespace: openspeedtest  # Added namespace
  labels:
    app: openspeedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openspeedtest
  template:
    metadata:
      labels:
        app: openspeedtest
    spec:
      containers:
        - name: openspeedtest
          image: openspeedtest/latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest-service
  namespace: openspeedtest  # Added namespace
  labels:
    app: openspeedtest
spec:
  selector:
    app: openspeedtest
  ports:
    - name: http
      protocol: TCP
      port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress-openspeedtest
  namespace: openspeedtest
  labels:
    app: openspeedtest
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  tls:
    - hosts:
        - speedtest.lab.kratochvil.cloud
      secretName: openspeedtest-tls-secret
  rules:
    - host: speedtest.lab.kratochvil.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openspeedtest-service
                port:
                  number: 3000
